2004-05-28  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test4.

	* lspci.c (show_verbose): Header type 1 is probably legal for all
	types of bridges, not only for PCI-to-PCI bridges.

	* lspci.c (format_agp_rate): Write "x16", not "x@".
	(show_agp): rate[] could overflow.
	Bugs reported by Jakub Bogusz <qboosh@pld-linux.org>.

	* lspci.c (show_ht_*): Show HyperTransport capability with all its
	details. Once again code by Maciej simplified (i.e., possibly broken)
	by me.

	* lib/header.h: Added declarations of HyperTransport capability.
	Again thanks to Maciej.

	* lspci.c: Decode all bits of the secondary status word in type 1 headers.
	Thanks to Maciej W. Rozycki <macro@ds2.pg.gda.pl> for the patch.

2003-12-27  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test3.

	* lspci.man, setpci.man: Document domains and correct spelling.

	* lib/dump.c (dump_init): Added ability to read domain numbers.

	* lspci.c: Devices in domains different from 0 have their slot number
	printed as "<domain>:<bus>:<slot>.<func>". Tree view supports domains
	as well.

	* lib/filter.c: Slot filters understand domains.

	* lib/generic.c: Mention the domain in slot numbers in all error messages.

	* lib/internal.h: The #ifdef for Linux <asm/byteorder.h> was wrong.

	* lib/access.c (pci_get_dev): Added support for domains.

	* lib/sysfs.c (sysfs_scan): Read vendor and device ID from the config
	registers (or to be precise, leave it for the generic parts of the pcilib
	to do so) instead of reading them from the sysfs. It's faster this way.

	* lspci.c (show_pcix): Don't touch pci_dev->hdrtype, it's an internal
	variable. Better read it from the config registers (it's cached anyway).

	* lib/sysfs.c (sysfs_scan), lib/proc.c (proc_scan): Don't read the hdrtype.
	  lib/generic.c (pci_generic_fill_info): If hdrtype is -1 (unset), read it.
	  Saves lots of unnecessary file accesses.

	* lib/pci.h (PCIADDR_PORT_FMT): Use %llx instead of %Lx, because the latter